@@ -740,6 +740,8 @@ qc pass: sgt vlan map out encapsulation
 qc pass: sgt tunnel map out encapsulation
 qc pass: sgt over macsec ethernet encapsulation
 qc pass: sgt over macsec vlan encapsulation
+qc pass: sgt hairpin encapsulation
+qc pass: no sgt ethernet encapsulation
 qc pass: skip over ipv4
 qc pass: skip over ipv6
 qc pass: skip over skip
@@ -1457,6 +1459,10 @@ qc pass: p4lang: sgt over l2tp
 qc pass: p4lang: sgt over hairpin
 qc pass: p4lang: sgt over macsec over ethernet
 qc pass: p4lang: sgt over macsec over vlan
+qc pass: p4lang: sgt ingress access list
+qc pass: p4lang: sgt egress access list
+qc pass: p4lang: sgt vlan ingress access list
+qc pass: p4lang: sgt vlan egress access list
 qc pass: p4lang: routing
 qc pass: p4lang: bridging
 qc pass: p4lang: mpls core
